[tool.poetry]
name = "gnnnas"
version = "0.1.0"
description = "Library to help write symbolic programs to generate expressive message passing neural networks."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.1"
scikit-learn = "^1.3.1"
pdoc3 = "^0.10.0"
pytest = "^7.4.2"
torch-geometric = "^2.4.0"
torch = "^2.1.0+cu118"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
